src/test/compile-fail/extfmt-not-enough-args.rs
// error-pattern:not enough arguments

extern mod std;

fn main() { let s = fmt!("%s%s%s", "test", "test"); }
